# chessviz2

./: .gitignore  Cargo.toml  DESIGN.md
crates/crude-layout/: Cargo.toml
crates/crude-layout/src/: lib.rs
crates/family-enum/: Cargo.toml
crates/family-enum/src/: lib.rs
crates/family-graph/: Cargo.toml
crates/family-graph/src/: lib.rs
crates/legality-predicate/: Cargo.toml
crates/legality-predicate/src/: lib.rs
crates/placement-codec/: Cargo.toml
crates/placement-codec/src/: lib.rs
crates/settle-family-layout/: Cargo.toml
crates/settle-family-layout/src/: main.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: camera.rs  font.rs  label_shader.wgsl  main.rs  renderer.rs  shader.wgsl  text_shader.wgsl
docs/: artifact-formats.md  build-order.md  non-commitments.md  validation-criteria.md
