[package]
name    = "viewer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]
crude-layout  = { workspace = true }
family-enum   = { workspace = true }
family-graph  = { workspace = true }
glam          = { workspace = true }
bincode       = { workspace = true }
wgpu          = "22"
winit         = "0.30"
bytemuck      = { version = "1", features = ["derive"] }
pollster      = "0.3"
env_logger    = "0.11"
glyphon = "0.6"
